SERVER-36966 Validate ns in cluster mapReduce

Also ensures that the temp collections are always up to date, and
extends the passthrough coverage of the mapReduce command outputting to
a sharded collection.