jstests/libs/override_methods/implicitly_shard_accessed_collections.js
@@ -12,11 +12,15 @@
 (function() {
     'use strict';
 
-    // Save a reference to the original getCollection method in the IIFE's scope.
-    // This scoping allows the original method to be called by the getCollection override below.
+    load("jstests/libs/override_methods/override_helpers.js");  // For 'OverrideHelpers'.
+
+    // Save a reference to the original methods in the IIFE's scope.
+    // This scoping allows the original methods to be called by the overrides below.
     var originalGetCollection = DB.prototype.getCollection;
     var originalDBCollectionDrop = DBCollection.prototype.drop;
     var originalStartParallelShell = startParallelShell;
+    var originalRunCommand = Mongo.prototype.runCommand;
+
     var testMayRunDropInParallel = false;
 
     // Blacklisted namespaces that should not be sharded.
@@ -104,6 +108,54 @@
         return dropResult;
     };
 
+    // The mapReduce command has a special requirement where the command must indicate the output
+    // collection is sharded, so we must be sure to add this information in this passthrough.
+    Mongo.prototype.runCommand = function(dbName, cmdObj, options) {
+        // Skip any commands that are not mapReduce or do not have an 'out' option.
+        if (typeof cmdObj !== 'object' || cmdObj === null ||
+            (!cmdObj.hasOwnProperty('mapreduce') && !cmdObj.hasOwnProperty('mapReduce')) ||
+            !cmdObj.hasOwnProperty('out')) {
+            return originalRunCommand.apply(this, arguments);
+        }
+
+        const originalCmdObj = Object.merge({}, cmdObj);
+
+        // SERVER-5448 'jsMode' is not supported through mongos. The 'jsMode' should not impact the
+        // results at all, so can be safely deleted in the sharded environment.
+        delete cmdObj.jsMode;
+
+        // Modify the output options to specify that the collection is sharded.
+        let outputSpec = cmdObj.out;
+        if (typeof(outputSpec) === "string") {
+            this.getDB(dbName)[outputSpec].drop();  // This will implicitly shard it.
+            outputSpec = {replace: outputSpec, sharded: true};
+        } else if (typeof(outputSpec) !== "object") {
+            // This is a malformed command, just send it along.
+            return originalRunCommand.apply(this, arguments);
+        } else if (!outputSpec.hasOwnProperty("sharded")) {
+            let outputColl = null;
+            if (outputSpec.hasOwnProperty("replace")) {
+                outputColl = outputSpec.replace;
+            } else if (outputSpec.hasOwnProperty("merge")) {
+                outputColl = outputSpec.merge;
+            } else if (outputSpec.hasOwnProperty("reduce")) {
+                outputColl = outputSpec.reduce;
+            }
+
+            if (outputColl === null) {
+                // This is a malformed command, just send it along.
+                return originalRunCommand.apply(this, arguments);
+            }
+            this.getDB(dbName)[outputColl].drop();  // This will implicitly shard it.
+            outputSpec.sharded = true;
+        }
+
+        cmdObj.out = outputSpec;
+        jsTestLog('Overriding mapReduce command. Original command: ' + tojson(originalCmdObj) +
+                  ' New command: ' + tojson(cmdObj));
+        return originalRunCommand.apply(this, arguments);
+    };
+
     // Tests may use a parallel shell to run the "drop" command concurrently with other
     // operations. This can cause the "shardCollection" command to return a
     // ConflictingOperationInProgress error response.
@@ -111,4 +163,8 @@
         testMayRunDropInParallel = true;
         return originalStartParallelShell.apply(this, arguments);
     };
+
+    OverrideHelpers.prependOverrideInParallelShell(
+        "jstests/libs/override_methods/implicitly_shard_accessed_collections.js");
+
 }());
